app/assets/stylesheets/manager/dashboard.scss
@import "variables";
@import "mixins/search";
@import "mixins/tables";

.manager {
  .link-group {
    display: flex;
    margin-bottom: 0;
    margin-top: 0;

    li {
      list-style: none;

      a {
        border: 1px solid $gray;
        padding: 0.4375rem 0.625rem;

        img {
          vertical-align: middle;
        }
      }

      a.active {
        background-color: $gray;
        .tab-icon {
          filter: brightness(0) invert(1);
        }
      }
    }

    li:first-child a {
      border-bottom-left-radius: 1rem;
      border-top-left-radius: 1rem;
    }

    li:last-child a {
      border-bottom-right-radius: 1rem;
      border-top-right-radius: 1rem;
    }

    li:not(:first-child) a {
      margin-left: -1px;
    }
  }
}

.manager.dashboard {
  .content {
    padding: 3.5rem 1.25rem 1.25rem 1.25rem;
  }

  header.content-header {
    align-items: center;
    display: flex;
    justify-content: space-between;
    margin-top: .5rem;
    margin-bottom: .5rem;

    h2 {
      display: inline-block;
      font-size: 1.85rem;
      font-weight: $medium;
      margin-bottom: 0;
      margin-top: 0;
      margin-right: 1.5rem;
    }

    a {
      color: $sky-blue;
      font-size: 0.75rem;
      vertical-align: middle;
    }
  }

  hr {
    border-bottom: 0;
    border-left: 0;
    border-right: 0;
    border-top: 2px solid $gray;
    margin: 0;
  }

  section.dashboard-content {
    margin-top: 4rem;
  }

  h3 {
    font-size: 1rem;
    font-weight: $medium;
    margin: .5rem 0;
  }

  .info-block {
    background-color: $light-gray;
    margin-bottom: 3rem;

    > *:not(:last-child) {
      border-bottom: 1px solid $gray
    }

    .dash-cards {
      display: flex;
      flex-flow: row;

      .dash-card {
        padding: 1.5rem;

        h4 {
          display: inline-block;
          font-size: 2rem;
          font-weight: $medium;
          margin: 0 .75rem 0 0;
        }

        img {
          margin: 0 .4rem
        }
      }
    }

    .dash-table {
      padding-bottom: .75rem;

      small.user-role {
        display: block;
        color: $semidark-bluegray;
      }
    }

    .dash-chart {
      padding: 1.5rem;
    }

    table.card-table {
      @include card-table;
    }

    table.card-table:not(:last-of-type) {
      border-bottom: 1px solid $gray;

      td {
        padding-bottom: .75rem;
      }
    }

    .visit-day-list-empty {
      color: $semidark-bluegray;
      font-size: 1rem;
      padding: 2rem;
      text-align: center;
    }
  }

  @include search-subsection;

  .calendar-container {
    .pulldowns {
      background-color: $light-light-blue;
      display: flex;
      justify-content: end;
      margin-bottom: 3rem;
      padding: 1.5rem;
    }

    .simple-calendar {
      .calendar-heading {
        align-items: center;
        display: flex;
        justify-content: center;
        margin: 2rem;
      }

      .calendar-title {
        border: none;
        margin: 0px 70px 0px 70px;
      }

      text-align: center;

      .table {
        border: 0px;
        td {
          border: 0px;
          color: $semidark-bluegray;
          padding-left: 0px;
          padding-right: 0px;
        }

        th {
          border: 0px;
          color: $semidark-bluegray;
          font-size: 0.8rem;
          font-weight: $medium;
          text-align: center;
        }
      }

      .day {
        div:first-child {
          margin-top: 1.5rem;
        }

        div:last-child {
          margin-bottom: 1.5rem;
        }
      }

      .prev-month {
        background: $light-light-blue;
      }

      .next-month {
        background: $light-light-blue;
      }

      .date-text {
        font-size: 0.65rem;
      }

      .visitor-count {
        background-color: #002045;
        font-size: 0.7rem;
        height: 25px;
        margin: 0.5rem 0px;
        position: relative;
      }

      .amenity-count {
        background-color: #1295d8;
        font-size: 0.7rem;
        height: 25px;
        margin: 5px 0px;
        position: relative;
      }

      .left-radius {
        border-top-left-radius: 15px;
        border-bottom-left-radius: 15px;
      }

      .right-radius {
        border-top-right-radius: 15px;
        border-bottom-right-radius: 15px;
      }

      .bars-text {
        background-color: transparent;
        color: white;
        left: 20px;
        margin-top: 0.3rem;
        position: absolute;
        white-space: nowrap;
        z-index: 1;
      }
    }
  }

  .modal {
    .clr-gray {
      color: $dark-bluegray;
    }

    .clr-blue {
      color: $cornflower;
    }

    .calendar-modal {
      p {
        margin: 0px;
      }
    }

    .vertical-padding {
      padding: 8px 0px;
    }

    .black-btn {
      background-color: $dark-bluegray;
      border-radius: 4px;
      color: $white !important;
    }

    .display-flex {
      border-bottom: 2px solid $dark-bluegray;
      border-left: 10px solid $lightgreen;
      display: flex;
      justify-content: space-between;
      padding: 0px 10px;

      p {
        margin: 0px;
      }

      p:last-child {
        padding-right: 7rem;
      }
    }

    .text {
      padding: 2.25rem;
    }
  }
}

